# kmeans_tatami

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  classkmeans__tatami_1_1Matrix-members.html  classkmeans__tatami_1_1Matrix.html  classkmeans__tatami_1_1Matrix__coll__graph.md5  classkmeans__tatami_1_1Matrix__inherit__graph.map  dir_43073b0faefdb476b5a2d63e8a2e6663.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  kmeans__tatami_8hpp.html  kmeans__tatami_8hpp__incl.map  kmeans__tatami_8hpp__incl.md5  kmeans__tatami_8hpp_source.html  kmeans_tatami.tag  namespacekmeans__tatami.html  namespaces.html
docs/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_a.js  classes_b.js  files_2.js  files_3.js  files_7.js  files_8.js  files_9.js  files_c.js  files_d.js  files_e.js  functions_2.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+13 more)
include/kmeans_tatami/: kmeans_tatami.hpp
tests/: CMakeLists.txt
tests/src/: kmeans_tatami.cpp
